sql-parsing/sql-parser-full/sql-parser.output
Terminals unused in grammar

    ADD
    ALTER
    ANALYZE
    BEFORE
    CALL
    CASCADE
    CHANGE
    CHECK
    COLUMN
    CONDITION
    CONSTRAINT
    CONTINUE
    CONVERT
    CURRENT_USER
    CURSOR
    DATABASES
    DECLARE
    DESCRIBE
    DETERMINISTIC
    DIV
    DROP
    DUAL
    EACH
    ELSEIF
    EXIT
    EXPLAIN
    FETCH
    FOREIGN
    GRANT
    INFILE
    INOUT
    INSENSITIVE
    ITERATE
    KEYS
    KILL
    LEAVE
    LINES
    LOAD
    LOCALTIME
    LOCALTIMESTAMP
    LOCK
    LONG
    LOOP
    MATCH
    MINUTE_MICROSECOND
    MINUTE_SECOND
    MODIFIES
    NO_WRITE_TO_BINLOG
    NUMBER
    OPTIMIZE
    OPTION
    OPTIONALLY
    OUT
    OUTFILE
    PRECISION
    PROCEDURE
    PURGE
    READ
    READS
    REFERENCES
    RELEASE
    RENAME
    REPEAT
    REQUIRE
    RESTRICT
    RETURN
    REVOKE
    SCHEMAS
    SECOND_MICROSECOND
    SENSITIVE
    SEPARATOR
    SHOW
    SONAME
    SPATIAL
    SPECIFIC
    SQL
    SQLEXCEPTION
    SQLSTATE
    SQLWARNING
    SSL
    STARTING
    TERMINATED
    TO
    TRIGGER
    UNDO
    UNION
    UNLOCK
    USAGE
    UTC_DATE
    UTC_TIME
    UTC_TIMESTAMP
    VARYING
    WHILE
    WRITE
    ESCAPED


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 expr: NAME
    4     | NAME '.' NAME
    5     | USERVAR
    6     | STRING
    7     | INTNUM
    8     | APPROXNUM
    9     | BOOL
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | expr '%' expr
   15     | expr MOD expr
   16     | '-' expr
   17     | expr ANDOP expr
   18     | expr OR expr
   19     | expr XOR expr
   20     | expr '|' expr
   21     | expr '&' expr
   22     | expr '^' expr
   23     | expr SHIFT expr
   24     | NOT expr
   25     | '!' expr
   26     | expr COMPARISON expr
   27     | expr COMPARISON '(' select_stmt ')'
   28     | expr COMPARISON ANY '(' select_stmt ')'
   29     | expr COMPARISON SOME '(' select_stmt ')'
   30     | expr COMPARISON ALL '(' select_stmt ')'
   31     | expr IS NULLX
   32     | expr IS NOT NULLX
   33     | expr IS BOOL
   34     | expr IS NOT BOOL
   35     | USERVAR ASSIGN expr
   36     | expr BETWEEN expr AND expr

   37 val_list: expr
   38         | expr ',' val_list

   39 opt_val_list: ε
   40             | val_list

   41 expr: expr IN '(' val_list ')'
   42     | expr NOT IN '(' val_list ')'
   43     | expr IN '(' select_stmt ')'
   44     | expr NOT IN '(' select_stmt ')'
   45     | EXISTS '(' select_stmt ')'
   46     | NAME '(' opt_val_list ')'
   47     | FCOUNT '(' '*' ')'
   48     | FCOUNT '(' expr ')'
   49     | FSUBSTRING '(' val_list ')'
   50     | FSUBSTRING '(' expr FROM expr ')'
   51     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   52     | FTRIM '(' val_list ')'
   53     | FTRIM '(' trim_ltb expr FROM val_list ')'

   54 trim_ltb: LEADING
   55         | TRAILING
   56         | BOTH

   57 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   58     | FDATE_SUB '(' expr ',' interval_exp ')'

   59 interval_exp: INTERVAL expr DAY_HOUR
   60             | INTERVAL expr DAY_MICROSECOND
   61             | INTERVAL expr DAY_MINUTE
   62             | INTERVAL expr DAY_SECOND
   63             | INTERVAL expr YEAR_MONTH
   64             | INTERVAL expr YEAR
   65             | INTERVAL expr HOUR_MICROSECOND
   66             | INTERVAL expr HOUR_MINUTE
   67             | INTERVAL expr HOUR_SECOND

   68 expr: CASE expr case_list END
   69     | CASE expr case_list ELSE expr END
   70     | CASE case_list END
   71     | CASE case_list ELSE expr END

   72 case_list: WHEN expr THEN expr
   73          | case_list WHEN expr THEN expr

   74 expr: expr LIKE expr
   75     | expr NOT LIKE expr
   76     | expr REGEXP expr
   77     | expr NOT REGEXP expr
   78     | CURRENT_TIMESTAMP
   79     | CURRENT_DATE
   80     | CURRENT_TIME
   81     | BINARY expr

   82 stmt: select_stmt

   83 select_stmt: SELECT select_opts select_expr_list
   84            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   85 opt_where: ε
   86          | WHERE expr

   87 opt_groupby: ε
   88            | GROUP BY groupby_list opt_with_rollup

   89 groupby_list: expr opt_asc_desc
   90             | groupby_list ',' expr opt_asc_desc

   91 opt_asc_desc: ε
   92             | ASC
   93             | DESC

   94 opt_with_rollup: ε
   95                | WITH ROLLUP

   96 opt_having: ε
   97           | HAVING expr

   98 opt_orderby: ε
   99            | ORDER BY groupby_list

  100 opt_limit: ε
  101          | LIMIT expr
  102          | LIMIT expr ',' expr

  103 opt_into_list: ε
  104              | INTO column_list

  105 column_list: NAME
  106            | column_list ',' NAME

  107 select_opts: ε
  108            | select_opts ALL
  109            | select_opts DISTINCT
  110            | select_opts DISTINCTROW
  111            | select_opts HIGH_PRIORITY
  112            | select_opts STRAIGHT_JOIN
  113            | select_opts SQL_SMALL_RESULT
  114            | select_opts SQL_BIG_RESULT
  115            | select_opts SQL_CALC_FOUND_ROWS

  116 select_expr_list: select_expr
  117                 | select_expr_list ',' select_expr
  118                 | '*'

  119 select_expr: expr opt_as_alias

  120 opt_as_alias: AS NAME
  121             | NAME
  122             | ε

  123 table_references: table_reference
  124                 | table_references ',' table_reference

  125 table_reference: table_factor
  126                | join_table

  127 table_factor: NAME opt_as_alias index_hint
  128             | NAME '.' NAME opt_as_alias index_hint
  129             | table_subquery opt_as NAME
  130             | '(' table_references ')'

  131 opt_as: AS
  132       | ε

  133 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  134           | table_reference STRAIGHT_JOIN table_factor
  135           | table_reference STRAIGHT_JOIN table_factor ON expr
  136           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  137           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  138 opt_inner_cross: ε
  139                | INNER
  140                | CROSS

  141 opt_outer: ε
  142          | OUTER

  143 left_or_right: LEFT
  144              | RIGHT

  145 opt_left_or_right_outer: LEFT opt_outer
  146                        | RIGHT opt_outer
  147                        | ε

  148 opt_join_condition: ε
  149                   | join_condition

  150 join_condition: ON expr
  151               | USING '(' column_list ')'

  152 index_hint: USE KEY opt_for_join '(' index_list ')'
  153           | IGNORE KEY opt_for_join '(' index_list ')'
  154           | FORCE KEY opt_for_join '(' index_list ')'
  155           | ε

  156 opt_for_join: FOR JOIN
  157             | ε

  158 index_list: NAME
  159           | index_list ',' NAME

  160 table_subquery: '(' select_stmt ')'

  161 stmt: delete_stmt

  162 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  163 delete_opts: delete_opts LOW_PRIORITY
  164            | delete_opts QUICK
  165            | delete_opts IGNORE
  166            | ε

  167 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  168 delete_list: NAME opt_dot_star
  169            | delete_list ',' NAME opt_dot_star

  170 opt_dot_star: ε
  171             | '.' '*'

  172 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  173 stmt: insert_stmt

  174 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  175 opt_ondupupdate: ε
  176                | ONDUPLICATE KEY UPDATE insert_asgn_list

  177 insert_opts: ε
  178            | insert_opts LOW_PRIORITY
  179            | insert_opts DELAYED
  180            | insert_opts HIGH_PRIORITY
  181            | insert_opts IGNORE

  182 opt_into: INTO
  183         | ε

  184 opt_col_names: ε
  185              | '(' column_list ')'

  186 insert_vals_list: '(' insert_vals ')'
  187                 | insert_vals_list ',' '(' insert_vals ')'

  188 insert_vals: expr
  189            | DEFAULT
  190            | insert_vals ',' expr
  191            | insert_vals ',' DEFAULT

  192 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  193 insert_asgn_list: NAME COMPARISON expr
  194                 | NAME COMPARISON DEFAULT
  195                 | insert_asgn_list ',' NAME COMPARISON expr
  196                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  197 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  198 stmt: replace_stmt

  199 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  200             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  201             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  202 stmt: update_stmt

  203 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  204 update_opts: ε
  205            | insert_opts LOW_PRIORITY
  206            | insert_opts IGNORE

  207 update_asgn_list: NAME COMPARISON expr
  208                 | NAME '.' NAME COMPARISON expr
  209                 | update_asgn_list ',' NAME COMPARISON expr
  210                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  211 stmt: create_database_stmt

  212 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  213                     | CREATE SCHEMA opt_if_not_exists NAME

  214 opt_if_not_exists: ε
  215                  | IF EXISTS

  216 stmt: create_table_stmt

  217 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  218                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  219                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  220                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  221                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  223 opt_temporary: ε
  224              | TEMPORARY

  225 create_col_list: create_definition
  226                | create_col_list ',' create_definition

  227 create_definition: PRIMARY KEY '(' column_list ')'
  228                  | KEY '(' column_list ')'
  229                  | INDEX '(' column_list ')'
  230                  | FULLTEXT INDEX '(' column_list ')'
  231                  | FULLTEXT KEY '(' column_list ')'

  232 $@1: ε

  233 create_definition: $@1 NAME data_type column_atts

  234 column_atts: ε
  235            | column_atts NOT NULLX
  236            | column_atts NULLX
  237            | column_atts DEFAULT STRING
  238            | column_atts DEFAULT INTNUM
  239            | column_atts DEFAULT APPROXNUM
  240            | column_atts DEFAULT BOOL
  241            | column_atts AUTO_INCREMENT
  242            | column_atts UNIQUE '(' column_list ')'
  243            | column_atts UNIQUE KEY
  244            | column_atts PRIMARY KEY
  245            | column_atts KEY
  246            | column_atts COMMENT STRING

  247 opt_length: ε
  248           | '(' INTNUM ')'
  249           | '(' INTNUM ',' INTNUM ')'

  250 opt_binary: ε
  251           | BINARY

  252 opt_uz: ε
  253       | opt_uz UNSIGNED
  254       | opt_uz ZEROFILL

  255 opt_csc: ε
  256        | opt_csc CHAR SET STRING
  257        | opt_csc COLLATE STRING

  258 data_type: BIT opt_length
  259          | TINYINT opt_length opt_uz
  260          | SMALLINT opt_length opt_uz
  261          | MEDIUMINT opt_length opt_uz
  262          | INT opt_length opt_uz
  263          | INTEGER opt_length opt_uz
  264          | BIGINT opt_length opt_uz
  265          | REAL opt_length opt_uz
  266          | DOUBLE opt_length opt_uz
  267          | FLOAT opt_length opt_uz
  268          | DECIMAL opt_length opt_uz
  269          | DATE
  270          | TIME
  271          | TIMESTAMP
  272          | DATETIME
  273          | YEAR
  274          | CHAR opt_length opt_csc
  275          | VARCHAR '(' INTNUM ')' opt_csc
  276          | BINARY opt_length
  277          | VARBINARY '(' INTNUM ')'
  278          | TINYBLOB
  279          | BLOB
  280          | MEDIUMBLOB
  281          | LONGBLOB
  282          | TINYTEXT opt_binary opt_csc
  283          | TEXT opt_binary opt_csc
  284          | MEDIUMTEXT opt_binary opt_csc
  285          | LONGTEXT opt_binary opt_csc
  286          | ENUM '(' enum_list ')' opt_csc
  287          | SET '(' enum_list ')' opt_csc

  288 enum_list: STRING
  289          | enum_list ',' STRING

  290 create_select_statement: opt_ignore_replace opt_as select_stmt

  291 opt_ignore_replace: ε
  292                   | IGNORE
  293                   | REPLACE

  294 stmt: set_stmt

  295 set_stmt: SET set_list

  296 set_list: set_expr
  297         | set_list ',' set_expr

  298 set_expr: USERVAR COMPARISON expr
  299         | USERVAR ASSIGN expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 25
    '%' (37) 14
    '&' (38) 21
    '(' (40) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 130 151 152 153 154 160 185 186 187 217 218 219 221 227 228 229 230 231 242 248 249 275 277 286 287
    ')' (41) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 130 151 152 153 154 160 185 186 187 217 218 219 221 227 228 229 230 231 242 248 249 275 277 286 287
    '*' (42) 12 47 118 171
    '+' (43) 10
    ',' (44) 38 57 58 90 102 106 117 124 159 169 187 190 191 195 196 209 210 226 249 289 297
    '-' (45) 11 16
    '.' (46) 4 128 171 208 210 218 221 222
    '/' (47) 13
    ';' (59) 1 2
    '^' (94) 22
    '|' (124) 20
    error (256)
    NAME <strval> (258) 3 4 46 105 106 120 121 127 128 129 158 159 162 168 169 174 192 193 194 195 196 197 199 200 201 207 208 209 210 212 213 217 218 219 220 221 222 233
    STRING <strval> (259) 6 237 246 256 257 288 289
    INTNUM <intval> (260) 7 238 248 249 275 277
    BOOL <intval> (261) 9 33 34 240
    APPROXNUM <floatval> (262) 8 239
    USERVAR <strval> (263) 5 35 298 299
    ASSIGN (264) 35 299
    OR (265) 18
    XOR (266) 19
    ANDOP (267) 17
    IN (268) 41 42 43 44
    IS (269) 31 32 33 34
    LIKE (270) 74 75
    REGEXP (271) 76 77
    NOT (272) 24 32 34 42 44 75 77 235
    BETWEEN (273) 36
    COMPARISON <subtok> (274) 26 27 28 29 30 193 194 195 196 207 208 209 210 298
    SHIFT <subtok> (275) 23
    MOD (276) 15
    UMINUS (277)
    ADD (278)
    ALL (279) 30 108
    ALTER (280)
    ANALYZE (281)
    AND (282) 36
    ANY (283) 28
    AS (284) 120 131
    ASC (285) 92
    AUTO_INCREMENT (286) 241
    BEFORE (287)
    BIGINT (288) 264
    BINARY (289) 81 251 276
    BIT (290) 258
    BLOB (291) 279
    BOTH (292) 56
    BY (293) 88 99
    CALL (294)
    CASCADE (295)
    CASE (296) 68 69 70 71
    CHANGE (297)
    CHAR (298) 256 274
    CHECK (299)
    COLLATE (300) 257
    COLUMN (301)
    COMMENT (302) 246
    CONDITION (303)
    CONSTRAINT (304)
    CONTINUE (305)
    CONVERT (306)
    CREATE (307) 212 213 217 218 219 220 221 222
    CROSS (308) 140
    CURRENT_DATE (309) 79
    CURRENT_TIME (310) 80
    CURRENT_TIMESTAMP (311) 78
    CURRENT_USER (312)
    CURSOR (313)
    DATABASE (314) 212
    DATABASES (315)
    DATE (316) 269
    DATETIME (317) 272
    DAY_HOUR (318) 59
    DAY_MICROSECOND (319) 60
    DAY_MINUTE (320) 61
    DAY_SECOND (321) 62
    DECIMAL (322) 268
    DECLARE (323)
    DEFAULT (324) 189 191 194 196 237 238 239 240
    DELAYED (325) 179
    DELETE (326) 162 167 172
    DESC (327) 93
    DESCRIBE (328)
    DETERMINISTIC (329)
    DISTINCT (330) 109
    DISTINCTROW (331) 110
    DIV (332)
    DOUBLE (333) 266
    DROP (334)
    DUAL (335)
    EACH (336)
    ELSE (337) 69 71
    ELSEIF (338)
    END (339) 68 69 70 71
    ENUM (340) 286
    EXIT (341)
    EXPLAIN (342)
    FETCH (343)
    FLOAT (344) 267
    FOR (345) 51 156
    FORCE (346) 154
    FOREIGN (347)
    FROM (348) 50 51 53 84 162 167 172
    FULLTEXT (349) 230 231
    GRANT (350)
    GROUP (351) 88
    HAVING (352) 97
    HIGH_PRIORITY (353) 111 180
    HOUR_MICROSECOND (354) 65
    HOUR_MINUTE (355) 66
    HOUR_SECOND (356) 67
    IF (357) 215
    IGNORE (358) 153 165 181 206 292
    INFILE (359)
    INDEX (360) 229 230
    INNER (361) 139
    INOUT (362)
    INSENSITIVE (363)
    INSERT (364) 174 192 197
    INT (365) 262
    INTEGER (366) 263
    INTERVAL (367) 59 60 61 62 63 64 65 66 67
    INTO (368) 104 182
    ITERATE (369)
    JOIN (370) 133 136 137 156
    KEY (371) 152 153 154 176 227 228 231 243 244 245
    KEYS (372)
    KILL (373)
    LEADING (374) 54
    LEAVE (375)
    LEFT (376) 143 145
    LIMIT (377) 101 102
    LINES (378)
    LOAD (379)
    LOCALTIME (380)
    LOCALTIMESTAMP (381)
    LOCK (382)
    LONG (383)
    LONGBLOB (384) 281
    LONGTEXT (385) 285
    LOOP (386)
    LOW_PRIORITY (387) 163 178 205
    MATCH (388)
    MEDIUMBLOB (389) 280
    MEDIUMINT (390) 261
    MEDIUMTEXT (391) 284
    MINUTE_MICROSECOND (392)
    MINUTE_SECOND (393)
    MODIFIES (394)
    NATURAL (395) 137
    NO_WRITE_TO_BINLOG (396)
    NULLX (397) 31 32 235 236
    NUMBER (398)
    ON (399) 135 150
    ONDUPLICATE (400) 176
    OPTIMIZE (401)
    OPTION (402)
    OPTIONALLY (403)
    ORDER (404) 99
    OUT (405)
    OUTER (406) 142
    OUTFILE (407)
    PRECISION (408)
    PRIMARY (409) 227 244
    PROCEDURE (410)
    PURGE (411)
    QUICK (412) 164
    READ (413)
    READS (414)
    REAL (415) 265
    REFERENCES (416)
    RELEASE (417)
    RENAME (418)
    REPEAT (419)
    REPLACE (420) 199 200 201 293
    REQUIRE (421)
    RESTRICT (422)
    RETURN (423)
    REVOKE (424)
    RIGHT (425) 144 146
    ROLLUP (426) 95
    SCHEMA (427) 213
    SCHEMAS (428)
    SECOND_MICROSECOND (429)
    SELECT (430) 83 84
    SENSITIVE (431)
    SEPARATOR (432)
    SET (433) 192 200 203 256 287 295
    SHOW (434)
    SMALLINT (435) 260
    SOME (436) 29
    SONAME (437)
    SPATIAL (438)
    SPECIFIC (439)
    SQL (440)
    SQLEXCEPTION (441)
    SQLSTATE (442)
    SQLWARNING (443)
    SQL_BIG_RESULT (444) 114
    SQL_CALC_FOUND_ROWS (445) 115
    SQL_SMALL_RESULT (446) 113
    SSL (447)
    STARTING (448)
    STRAIGHT_JOIN (449) 112 134 135
    TABLE (450) 217 218 219 220 221 222
    TEMPORARY (451) 224
    TERMINATED (452)
    TEXT (453) 283
    THEN (454) 72 73
    TIME (455) 270
    TIMESTAMP (456) 271
    TINYBLOB (457) 278
    TINYINT (458) 259
    TINYTEXT (459) 282
    TO (460)
    TRAILING (461) 55
    TRIGGER (462)
    UNDO (463)
    UNION (464)
    UNIQUE (465) 242 243
    UNLOCK (466)
    UNSIGNED (467) 253
    UPDATE (468) 176 203
    USAGE (469)
    USE (470) 152
    USING (471) 151 172
    UTC_DATE (472)
    UTC_TIME (473)
    UTC_TIMESTAMP (474)
    VALUES (475) 174 199
    VARBINARY (476) 277
    VARCHAR (477) 275
    VARYING (478)
    WHEN (479) 72 73
    WHERE (480) 86
    WHILE (481)
    WITH (482) 95
    WRITE (483)
    YEAR (484) 64 273
    YEAR_MONTH (485) 63
    ZEROFILL (486) 254
    ESCAPED (487)
    EXISTS <subtok> (488) 45 215
    FSUBSTRING (489) 49 50 51
    FTRIM (490) 52 53
    FDATE_ADD (491) 57
    FDATE_SUB (492) 58
    FCOUNT (493) 47 48


Nonterminals, with rules where they appear

    $accept (253)
        on left: 0
    stmt_list (254)
        on left: 1 2
        on right: 0 2
    expr (255)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 68 69 70 71 74 75 76 77 78 79 80 81
        on right: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 41 42 43 44 48 50 51 53 57 58 59 60 61 62 63 64 65 66 67 68 69 71 72 73 74 75 76 77 81 86 89 90 97 101 102 119 135 150 188 190 193 195 207 208 209 210 298 299
    val_list <intval> (256)
        on left: 37 38
        on right: 38 40 41 42 49 52 53
    opt_val_list <intval> (257)
        on left: 39 40
        on right: 46
    trim_ltb (258)
        on left: 54 55 56
        on right: 53
    interval_exp (259)
        on left: 59 60 61 62 63 64 65 66 67
        on right: 57 58
    case_list <intval> (260)
        on left: 72 73
        on right: 68 69 70 71 73
    stmt (261)
        on left: 82 161 173 198 202 211 216 294
        on right: 1 2
    select_stmt (262)
        on left: 83 84
        on right: 27 28 29 30 43 44 45 82 160 197 201 290
    opt_where (263)
        on left: 85 86
        on right: 84 162 167 172 203
    opt_groupby (264)
        on left: 87 88
        on right: 84
    groupby_list <intval> (265)
        on left: 89 90
        on right: 88 90 99
    opt_asc_desc <intval> (266)
        on left: 91 92 93
        on right: 89 90
    opt_with_rollup <intval> (267)
        on left: 94 95
        on right: 88
    opt_having (268)
        on left: 96 97
        on right: 84
    opt_orderby (269)
        on left: 98 99
        on right: 84 162 203
    opt_limit (270)
        on left: 100 101 102
        on right: 84 162 203
    opt_into_list (271)
        on left: 103 104
        on right: 84
    column_list <intval> (272)
        on left: 105 106
        on right: 104 106 151 185 227 228 229 230 231 242
    select_opts <intval> (273)
        on left: 107 108 109 110 111 112 113 114 115
        on right: 83 84 108 109 110 111 112 113 114 115
    select_expr_list <intval> (274)
        on left: 116 117 118
        on right: 83 84 117
    select_expr (275)
        on left: 119
        on right: 116 117
    opt_as_alias (276)
        on left: 120 121 122
        on right: 119 127 128
    table_references <intval> (277)
        on left: 123 124
        on right: 84 124 130 167 172 203
    table_reference (278)
        on left: 125 126
        on right: 123 124 133 134 135 136 137
    table_factor (279)
        on left: 127 128 129 130
        on right: 125 133 134 135 136 137
    opt_as (280)
        on left: 131 132
        on right: 129 290
    join_table (281)
        on left: 133 134 135 136 137
        on right: 126
    opt_inner_cross <intval> (282)
        on left: 138 139 140
        on right: 133
    opt_outer <intval> (283)
        on left: 141 142
        on right: 136 145 146
    left_or_right <intval> (284)
        on left: 143 144
        on right: 136
    opt_left_or_right_outer <intval> (285)
        on left: 145 146 147
        on right: 137
    opt_join_condition (286)
        on left: 148 149
        on right: 133
    join_condition (287)
        on left: 150 151
        on right: 136 149
    index_hint (288)
        on left: 152 153 154 155
        on right: 127 128
    opt_for_join <intval> (289)
        on left: 156 157
        on right: 152 153 154
    index_list <intval> (290)
        on left: 158 159
        on right: 152 153 154 159
    table_subquery (291)
        on left: 160
        on right: 129
    delete_stmt (292)
        on left: 162 167 172
        on right: 161
    delete_opts <intval> (293)
        on left: 163 164 165 166
        on right: 162 163 164 165 167 172
    delete_list <intval> (294)
        on left: 168 169
        on right: 167 169 172
    opt_dot_star (295)
        on left: 170 171
        on right: 168 169
    insert_stmt (296)
        on left: 174 192 197
        on right: 173
    opt_ondupupdate (297)
        on left: 175 176
        on right: 174 192 197 199 200 201
    insert_opts <intval> (298)
        on left: 177 178 179 180 181
        on right: 174 178 179 180 181 192 197 199 200 201 205 206
    opt_into (299)
        on left: 182 183
        on right: 174 192 197 199 200 201
    opt_col_names (300)
        on left: 184 185
        on right: 174 197 199 201
    insert_vals_list <intval> (301)
        on left: 186 187
        on right: 174 187 199
    insert_vals <intval> (302)
        on left: 188 189 190 191
        on right: 186 187 190 191
    insert_asgn_list <intval> (303)
        on left: 193 194 195 196
        on right: 176 192 195 196 200
    replace_stmt (304)
        on left: 199 200 201
        on right: 198
    update_stmt (305)
        on left: 203
        on right: 202
    update_opts <intval> (306)
        on left: 204 205 206
        on right: 203
    update_asgn_list <intval> (307)
        on left: 207 208 209 210
        on right: 203 209 210
    create_database_stmt (308)
        on left: 212 213
        on right: 211
    opt_if_not_exists <intval> (309)
        on left: 214 215
        on right: 212 213 217 218 219 220 221 222
    create_table_stmt (310)
        on left: 217 218 219 220 221 222
        on right: 216
    opt_temporary <intval> (311)
        on left: 223 224
        on right: 217 218 219 220 221 222
    create_col_list <intval> (312)
        on left: 225 226
        on right: 217 218 219 221 226
    create_definition (313)
        on left: 227 228 229 230 231 233
        on right: 225 226
    $@1 (314)
        on left: 232
        on right: 233
    column_atts <intval> (315)
        on left: 234 235 236 237 238 239 240 241 242 243 244 245 246
        on right: 233 235 236 237 238 239 240 241 242 243 244 245 246
    opt_length <intval> (316)
        on left: 247 248 249
        on right: 258 259 260 261 262 263 264 265 266 267 268 274 276
    opt_binary <intval> (317)
        on left: 250 251
        on right: 282 283 284 285
    opt_uz <intval> (318)
        on left: 252 253 254
        on right: 253 254 259 260 261 262 263 264 265 266 267 268
    opt_csc (319)
        on left: 255 256 257
        on right: 256 257 274 275 282 283 284 285 286 287
    data_type <intval> (320)
        on left: 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287
        on right: 233
    enum_list <intval> (321)
        on left: 288 289
        on right: 286 287 289
    create_select_statement (322)
        on left: 290
        on right: 219 220 221 222
    opt_ignore_replace <intval> (323)
        on left: 291 292 293
        on right: 290
    set_stmt (324)
        on left: 295
        on right: 294
    set_list (325)
        on left: 296 297
        on right: 295 297
    set_expr (326)
        on left: 298 299
        on right: 296 297


State 0

    0 $accept: • stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


State 1

  212 create_database_stmt: CREATE • DATABASE opt_if_not_exists NAME
  213                     | CREATE • SCHEMA opt_if_not_exists NAME
  217 create_table_stmt: CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  218                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  219                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  220                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  221                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 223 (opt_temporary)

    opt_temporary  go to state 21


State 2

  162 delete_stmt: DELETE • delete_opts FROM NAME opt_where opt_orderby opt_limit
  167            | DELETE • delete_opts delete_list FROM table_references opt_where
  172            | DELETE • delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 166 (delete_opts)

    delete_opts  go to state 22


State 3

  174 insert_stmt: INSERT • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  192            | INSERT • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  197            | INSERT • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 177 (insert_opts)

    insert_opts  go to state 23


State 4

  199 replace_stmt: REPLACE • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  200             | REPLACE • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  201             | REPLACE • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 177 (insert_opts)

    insert_opts  go to state 24


State 5

   83 select_stmt: SELECT • select_opts select_expr_list
   84            | SELECT • select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 107 (select_opts)

    select_opts  go to state 25


State 6

  295 set_stmt: SET • set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


State 7

  203 update_stmt: UPDATE • update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 204 (update_opts)
    '('       reduce using rule 204 (update_opts)
    $default  reduce using rule 177 (insert_opts)

    insert_opts  go to state 29
    update_opts  go to state 30


State 8

    0 $accept: stmt_list • $end
    2 stmt_list: stmt_list • stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt                  go to state 32
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


State 9

    1 stmt_list: stmt • ';'

    ';'  shift, and go to state 33


State 10

   82 stmt: select_stmt •

    $default  reduce using rule 82 (stmt)


State 11

  161 stmt: delete_stmt •
